--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 body {
 	background-color: #fbf7ff;
-	color: rebeccapurple;
+	color:#663399;
 	
 }
 
@@ -65,7 +65,7 @@ hr {
 <ul>
 <li>HW1: Portal</li>
 <li>HW2: <a href="politics.html">Politics</A></li>
-<li>HW3: <a href="big.html">Big</A></li>
+<li>HW3: <a href="big/">Big</A></li>
 <li>HW4: <a href="wireframe.html">Wireframe</A></li>
 <li>HW5: <a href="form.html">Form</A></li>
 <li>HW6: <a href="template.html">Template</A></li>
@@ -74,7 +74,7 @@ hr {
 <br>
 <hr>
 
-<p><strong><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fedison.seattlecentral.edu%2F~Rebecca.Scott%2Fweb110%2F">VALID</a></strong></p>
+<p>Valid: <a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fedison.seattlecentral.edu%2F%7ERebecca.Scott%2Fweb110%2F">HTML</A> <a href=http://jigsaw.w3.org/css-validator/check/referer>CSS</a></p>
 </div><!--end wrapper div-->
 </body>
 </html>
